[gd_scene load_steps=10 format=2]

[ext_resource path="res://WorldScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://DisplayScene.gd" type="Script" id=2]
[ext_resource path="res://Shader_DepthToColor.tres" type="Shader" id=3]
[ext_resource path="res://Shader_FinalCombination.tres" type="Shader" id=4]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("ViewportContainer/Viewport/ViewportSilhouettes")

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/silhouette_color = Color( 0, 0, 0, 0.498039 )
shader_param/silhouette_depth_tex = SubResource( 5 )

[node name="DisplayScene" type="Spatial"]
script = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ViewportSilhouettes" type="Viewport" parent="ViewportContainer/Viewport"]
size = Vector2( 1024, 600 )
handle_input_locally = false
keep_3d_linear = true
render_target_update_mode = 3
gui_disable_input = true

[node name="SilhouettesCamera" type="Camera" parent="ViewportContainer/Viewport/ViewportSilhouettes"]
cull_mask = 1048574

[node name="FullScreenMesh" type="MeshInstance" parent="ViewportContainer/Viewport/ViewportSilhouettes/SilhouettesCamera"]
transform = Transform( 999, 0, 0, 0, -4.37114e-08, -999, 0, 1, -4.36677e-05, 0, 8.57642e-09, -0.196206 )
layers = 4
mesh = SubResource( 1 )
skeleton = NodePath("../../../../..")
material/0 = SubResource( 2 )

[node name="FinalRenderCamera" type="Camera" parent="ViewportContainer/Viewport"]
cull_mask = 1048571
current = true

[node name="FullScreenMesh" type="MeshInstance" parent="ViewportContainer/Viewport/FinalRenderCamera"]
transform = Transform( 999, 0, 0, 0, -4.37114e-08, -999, 0, 1, -4.36677e-05, 0, 8.57642e-09, -0.196206 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="World" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]
